# omip

./: .gitignore  PORTING_NOTES.md
omip_core/: .gitignore  CMakeLists.txt
omip_core/bindings/: CMakeLists.txt  omip_core_py.cpp  test_bindings_smoke.py
omip_core/include/omip_core/: Feature.h  FeaturesDataBase.h  LieGroup.hpp  Log.h  OMIPTypeDefs.h  OMIPUtils.h  RecursiveEstimatorFilterInterface.h  types.hpp
omip_core/include/omip_core/feature_tracker/: FeatureTracker.h  FeatureTrackerConfig.h  PointFeatureTracker.h
omip_core/include/omip_core/joint_tracker/: DisconnectedJointFilter.h  JointCombinedFilter.h  JointFilter.h  MultiJointTracker.h  PrismaticJointFilter.h  RevoluteJointFilter.h  RigidJointFilter.h
omip_core/include/omip_core/joint_tracker/pdf/: NonLinearPrismaticMeasurementPdf.h  NonLinearRevoluteMeasurementPdf.h
omip_core/include/omip_core/rb_tracker/: MultiRBTracker.h  RBFilter.h  StaticEnvironmentFilter.h
omip_core/src/: Feature.cpp  FeaturesDataBase.cpp  OMIPUtils.cpp  placeholder.cpp
omip_core/src/feature_tracker/: PointFeatureTracker.cpp
omip_core/src/joint_tracker/: DisconnectedJointFilter.cpp  JointCombinedFilter.cpp  JointFilter.cpp  MultiJointTracker.cpp  PrismaticJointFilter.cpp  RevoluteJointFilter.cpp  RigidJointFilter.cpp
omip_core/src/joint_tracker/pdf/: NonLinearPrismaticMeasurementPdf.cpp  NonLinearRevoluteMeasurementPdf.cpp
omip_core/src/rb_tracker/: MultiRBTracker.cpp  RBFilter.cpp  StaticEnvironmentFilter.cpp
omip_core/tests/: CMakeLists.txt  test_feature_tracker.cpp  test_joint_tracker.cpp  test_rb_tracker.cpp
omip_core/tests/fixtures/: README.md
omip_mujoco_wrapper/: README.md  pyproject.toml
omip_mujoco_wrapper/examples/: run_demo.py
omip_mujoco_wrapper/omip_mujoco_wrapper/: __init__.py  driver.py  orchestrator.py  scene_utils.py
